<resources>
    <string name="app_name">Zolostays</string>

    <!-- Login -->
    <string name="zolo_tag_line">Rethink PGs. Think Zolo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="zolo">Zolo</string>
    <string name="invalid_password_message">Please enter valid password.</string>
    <string name="invalid_phone_number_message">Please enter valid phone number.</string>
    <string name="invalid_email_message">Please enter valid email.</string>
    <string name="invalid_name_message">Please enter valid name.</string>
    <string name="invalid_credentials">Please provide correct phone number and password.</string>
    <string name="register">Register</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="your_name">Your Name</string>
    <string name="set_password">Set Password</string>
    <string name="logout">Logout</string>
    <string name="phone_number_exist">Phone number already exist.</string>

</resources>
