<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Data-->
    <data>
        <!--ViewModel-->
        <variable
            name="viewHolder"
            type="com.zolostays.ui.registration.RegistrationViewModel"/>
    </data>

    <!--Main UI-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/dimen_5"
            android:paddingLeft="@dimen/standard_large_padding"
            android:paddingRight="@dimen/standard_large_padding"
            android:paddingTop="@dimen/dimen_5"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatTextView
                style="@style/H2WhiteHeadingStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/register" />


            <!--Phone Number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_10"
                    app:srcCompat="@drawable/ic_phone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_phone_number"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:text="@={loginViewModel.phoneNumber}" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <!-- Email Id -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_10"
                    app:srcCompat="@drawable/ic_phone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_email_id"
                        android:inputType="textEmailAddress"
                        android:text="@={loginViewModel.email}" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_10"
                    app:srcCompat="@drawable/ic_phone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_name"
                        android:inputType="phone"
                        android:text="@={loginViewModel.name}" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--Password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_10"
                    app:srcCompat="@drawable/ic_key" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_password"
                        android:inputType="textPassword"
                        android:text="@={loginViewModel.password}" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--Create Account Button-->
            <android.support.v7.widget.AppCompatButton
                style="@style/H5ButtonYellowBoldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:onClick="@{loginViewModel::onRegisterClicked}"
                android:text="@string/create_account"
                android:textAllCaps="true" />

        </LinearLayout>

    </ScrollView>

</layout>